--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.16"
   }
 }
